##Text encoding: utf-8

2010-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: adjust curved arrows positions relative to stereo
	and multiple bonds.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/mechanism-arrow.cc: ditto.
	* libs/gcu/application.cc: ditto.
	* plugins/paint/arrows/curvedarrowtool.cc: ditto.

2010-04-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: implement curved arrow support in mesomery and
	fixed various issues.
	* libs/gcp/mechanism-arrow.cc: ditto.
	* libs/gcp/mechanism-arrow.h: ditto.
	* libs/gcp/mesomer.cc: ditto.
	* libs/gcp/mesomer.h: ditto.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/reaction-step.h: ditto.
	* plugins/paint/arrows/curvedarrowtool.cc: ditto.

2010-04-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: enhance support for curved arrows in reactions.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/mechanism-step.cc: ditto.
	* libs/gcp/mechanism-step.h: ditto.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-step.cc: ditto.
	* libs/gcp/reaction-step.h: ditto.
	* libs/gcp/reaction.cc: ditto.
	* plugins/paint/selection/selectiontool.cc: ditto.

2010-04-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-arrow.cc: don't add more than one item.
	* libs/gcp/reaction-step.cc: fix several issues with curved arrows
	inside reactions.

2010-03-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/bezier-arrow.cc: implement control points dragging.
	* libs/gcp/atom.cc: add Atom::GetBondAtAngle().
	* libs/gcp/atom.h: ditto.
	* libs/gcp/mechanism-arrow.cc: hide control points when unselecting.
	* libs/gcp/tool.h: fixed doc typo.
	* plugins/paint/arrows/curvedarrowtool.cc: arrow control points edition.
	* plugins/paint/arrows/curvedarrowtool.h: ditto.

2010-03-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-arrow.cc: allow electrons as source.
	* plugins/paint/arrows/curvedarrowtool.cc: more work on electrons as