@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2010-04-11  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/atom.cc: fixed various issues.
+	* libs/gcp/mechanism-arrow.cc: fix positions for single electron moves.
+	* plugins/paint/arrows/curvedarrowtool.cc: ditto.
+
 2010-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/bond.cc: adjust curved arrows positions relative to stereo
 	and multiple bonds.
